IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -6999,7 +6999,7 @@ msgstr ""
 
 #: lazarusidestrconsts.liscodetempladd
 msgctxt "lazarusidestrconsts.liscodetempladd"
-msgid "Add template"
+msgid "Add template ..."
 msgstr ""
 
 #: lazarusidestrconsts.liscodetempladdcodetemplate
