--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -6994,7 +6994,7 @@ msgstr ""
 #, fuzzy
 #| msgid "Add"
 msgctxt "lazarusidestrconsts.liscodetempladd"
-msgid "Add template"
+msgid "Add template ..."
 msgstr "Voeg by"
 
 #: lazarusidestrconsts.liscodetempladdcodetemplate
