--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -7182,7 +7182,7 @@ msgstr ""
 #, fuzzy
 #| msgid "Add"
 msgctxt "lazarusidestrconsts.liscodetempladd"
-msgid "Add template"
+msgid "Add template ..."
 msgstr "Afegeix"
 
 #: lazarusidestrconsts.liscodetempladdcodetemplate
