--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -7054,8 +7054,10 @@ msgid "Ignore next unnamed constants"
 msgstr "A következő meg nem nevezett konstansok kihagyása"
 
 #: lazarusidestrconsts.liscodetempladd
+#, fuzzy
+#| msgid "Add template"
 msgctxt "lazarusidestrconsts.liscodetempladd"
-msgid "Add template"
+msgid "Add template ..."
 msgstr "Sablon hozzáadása"
 
 #: lazarusidestrconsts.liscodetempladdcodetemplate
