--- a/languages/lazaruside.pot
+++ b/languages/lazaruside.pot
@@ -6958,7 +6958,7 @@ msgstr ""
 
 #: lazarusidestrconsts.liscodetempladd
 msgctxt "lazarusidestrconsts.liscodetempladd"
-msgid "Add template"
+msgid "Add template ..."
 msgstr ""
 
 #: lazarusidestrconsts.liscodetempladdcodetemplate
