--- a/lcl/languages/lclstrconsts.cs.po
+++ b/lcl/languages/lclstrconsts.cs.po
@@ -1363,7 +1363,7 @@ msgstr "Žlutá"
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Nelze zaktivnit zakázané nebo neviditelné okno"
 
 #: lclstrconsts.sduplicatemenus
