--- a/lcl/languages/lclstrconsts.fi.po
+++ b/lcl/languages/lclstrconsts.fi.po
@@ -1351,7 +1351,7 @@ msgstr "Keltainen"
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Ei voi fokusoida estettyä tai näkymätöntä ikkunaa"
 
 #: lclstrconsts.sduplicatemenus
