--- a/lcl/languages/lclstrconsts.id.po
+++ b/lcl/languages/lclstrconsts.id.po
@@ -1335,7 +1335,7 @@ msgstr ""
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Tidak bisa memberikan fokus ke jendela yang dimatikan atau tidak nampak"
 
 #: lclstrconsts.sduplicatemenus
