--- a/lcl/languages/lclstrconsts.no.po
+++ b/lcl/languages/lclstrconsts.no.po
@@ -1334,7 +1334,7 @@ msgstr ""
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Kan ikke fokusere et deaktivert eller usynlig vindu"
 
 #: lclstrconsts.sduplicatemenus
