--- a/lcl/languages/lclstrconsts.it.po
+++ b/lcl/languages/lclstrconsts.it.po
@@ -1367,7 +1367,7 @@ msgstr "Giallo"
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Impossibile dare il focus a finestre disabilitate o invisibili"
 
 #: lclstrconsts.sduplicatemenus
