--- a/lcl/languages/lclstrconsts.pot
+++ b/lcl/languages/lclstrconsts.pot
@@ -1263,7 +1263,7 @@ msgstr ""
 
 #: lclstrconsts.scannotfocus
 #, object-pascal-format
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr ""
 
 #: lclstrconsts.sduplicatemenus
