--- a/lcl/languages/lclstrconsts.pt.po
+++ b/lcl/languages/lclstrconsts.pt.po
@@ -1373,7 +1373,7 @@ msgstr "Amarelo"
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Impossível focar uma janela inativa ou invisível"
 
 #: lclstrconsts.sduplicatemenus
