--- a/lcl/languages/lclstrconsts.ru.po
+++ b/lcl/languages/lclstrconsts.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-07-01 17:58+0300\n"
+"PO-Revision-Date: 2025-07-06 22:55+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -1270,8 +1270,8 @@ msgstr "Жёлтый"
 
 #: lclstrconsts.scannotfocus
 #, object-pascal-format
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
-msgstr "Невозможно перевести фокус в отключённое или невидимое окно \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
+msgstr "Невозможно перевести фокус в отключённое или невидимое окно \"%s\""
 
 #: lclstrconsts.sduplicatemenus
 msgid "Duplicate menus"
