--- a/lcl/languages/lclstrconsts.tr.po
+++ b/lcl/languages/lclstrconsts.tr.po
@@ -1343,7 +1343,7 @@ msgstr "Sarı"
 #: lclstrconsts.scannotfocus
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Cannot focus a disabled or invisible window"
-msgid "Cannot focus a disabled or invisible window \"%s\":\"%s\""
+msgid "Cannot focus a disabled or invisible window \"%s\""
 msgstr "Etkisizleştirilmiş ya da görünmez pencerelere odaklanılamaz"
 
 #: lclstrconsts.sduplicatemenus
